// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`arcEllipseArcIntersection > overlapping ellipses > works with one overlap 1`] = `
[
  EllipseArc {
    "_coefficients": null,
    "center": [
      0,
      0,
    ],
    "clockwise": false,
    "firstPoint": [
      -2,
      0,
    ],
    "lastPoint": [
      -0.31286893008046207,
      -0.9876883405951377,
    ],
    "majorRadius": 2,
    "minorRadius": 1,
    "precision": 0.000001,
    "segmentType": "ELLIPSE_ARC",
    "tiltAngle": 0,
  },
]
`;

exports[`arcEllipseArcIntersection > overlapping ellipses > works with two overlaps 1`] = `
[
  EllipseArc {
    "_coefficients": null,
    "center": [
      0,
      0,
    ],
    "clockwise": false,
    "firstPoint": [
      0.6180339887498945,
      -0.9510565162951536,
    ],
    "lastPoint": [
      0,
      1,
    ],
    "majorRadius": 2,
    "minorRadius": 1,
    "precision": 0.000001,
    "segmentType": "ELLIPSE_ARC",
    "tiltAngle": 0,
  },
  EllipseArc {
    "_coefficients": null,
    "center": [
      0,
      0,
    ],
    "clockwise": false,
    "firstPoint": [
      -2,
      0,
    ],
    "lastPoint": [
      -0.31286893008046207,
      -0.9876883405951377,
    ],
    "majorRadius": 2,
    "minorRadius": 1,
    "precision": 0.000001,
    "segmentType": "ELLIPSE_ARC",
    "tiltAngle": 0,
  },
]
`;

exports[`arcEllipseArcIntersection > overlapping ellipses > works with two overlaps, with rotated ellipses 1`] = `
[
  EllipseArc {
    "_coefficients": null,
    "center": [
      0,
      0,
    ],
    "clockwise": false,
    "firstPoint": [
      1.0363094196341955,
      -0.4610176734302223,
    ],
    "lastPoint": [
      -0.5446390350150271,
      0.838670567945424,
    ],
    "majorRadius": 2,
    "minorRadius": 1,
    "precision": 0.000001,
    "segmentType": "ELLIPSE_ARC",
    "tiltAngle": 0.5759586531581287,
  },
  EllipseArc {
    "_coefficients": null,
    "center": [
      0,
      0,
    ],
    "clockwise": false,
    "firstPoint": [
      -1.677341135890848,
      -1.0892780700300542,
    ],
    "lastPoint": [
      0.2755396614342709,
      -0.9987457737252043,
    ],
    "majorRadius": 2,
    "minorRadius": 1,
    "precision": 0.000001,
    "segmentType": "ELLIPSE_ARC",
    "tiltAngle": 0.5759586531581287,
  },
]
`;

exports[`arcEllipseArcIntersection > should return the intersection points of an arc and an ellipse arc > should work for one direction 1`] = `
[
  [
    -0.34012050583121567,
    -1.01044334051099,
  ],
  [
    -1.4066529619990402,
    -0.8030218877085067,
  ],
  [
    0.3401205058312028,
    1.010443340510993,
  ],
]
`;

exports[`arcEllipseArcIntersection > should return the intersection points of an arc and an ellipse arc > should work for the opposite direction 1`] = `
[
  [
    1.4066529619990553,
    0.8030218877085041,
  ],
]
`;

exports[`arcEllipseArcIntersection > should work for axis aligned ellipses 1`] = `
[
  [
    -1.8371173883849603,
    -0.395284697025575,
  ],
  [
    1.8371172820973773,
    0.3952847107472433,
  ],
]
`;

exports[`arcEllipseArcIntersection > should work for tangent common points 1`] = `
[
  [
    -0,
    -0.9999999999999996,
  ],
  [
    -0,
    1.0000000080654898,
  ],
]
`;

exports[`arcEllipseArcIntersection > should work for two common points 1`] = `
[
  [
    -1.7517091212776155,
    0.40591170203063387,
  ],
  [
    1.4940750915951562,
    0.4335813271360177,
  ],
]
`;

exports[`arcEllipseArcIntersection > works with natural ellipses 1`] = `
[
  [
    -9.73327832537597,
    2.4946771419136993,
  ],
]
`;
